RESOLVED FIXED246329
[ATSPI] Modal element containing only StaticText is ignored
https://bugs.webkit.org/show_bug.cgi?id=246329
Summary [ATSPI] Modal element containing only StaticText is ignored
Vitaly Dyackhov
Reported 2022-10-11 03:12:42 PDT
It makes `accessibility/custom-elements/modal.html` time out.
Attachments
Vitaly Dyackhov
Comment 1 2022-10-11 03:44:54 PDT
EWS
Comment 2 2022-12-01 06:37:42 PST
Committed 257235@main (99e0cc3c3dd2): <https://commits.webkit.org/257235@main> Reviewed commits have been landed. Closing PR #5230 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.