Cherry-pick 257235@main (99e0cc3c3dd2). https://bugs.webkit.org/show_bug.cgi?id=246329

[ATSPI] Modal element containing only StaticText is ignored
    https://bugs.webkit.org/show_bug.cgi?id=246329

    Reviewed by Carlos Garcia Campos.

    A modal element will not be set as the current modal when it has no
    accessible content. But when using AT-SPI, an object with
    AccessibilityRole::StaticText is ignored, since we expect its parent
    to implement org.a11y.atspi.Text interface itself.

    Fixes `accessibility/custom-elements/modal.html` time out.

    * Source/WebCore/accessibility/AXObjectCache.cpp:
    (WebCore::AXObjectCache::modalElementHasAccessibleContent):

    Canonical link: https://commits.webkit.org/257235@main